--- a/app/src/main/res/layout/cardview_joke.xml
+++ b/app/src/main/res/layout/cardview_joke.xml
@@ -7,13 +7,14 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/layout_cardview_joke">
 
         <TextView
             android:id="@+id/text_cardview_joke"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Joke"
+            android:text="@string/joke"
             android:textAlignment="center"
             android:layout_marginVertical="20dp"
             app:layout_constraintStart_toStartOf="parent"
