- Adicionado ícone personalizado para o app.
- Arquivo themes.xml implementado, tanto no modo noturno quanto no normal.
- Criado o arquivo attrs.xml para lidar com os temas.
- Cores adicionadas no arquivo colors.xml para trabalhar com os temas.
- Substituição de Toast por SnackBar.
- Layout das View's rebuscados e padronizados.
- Adição de strings no arquivo strings.xml (em pt e en).
- Corrigido o bug onde a activity_favorite_jokes não abria (Foi adicionado o Migrations no JokeDataBase.kt).
- Implementada mensagem de "lista vazia" na activity_favorite_jokes quando não há piadas armazenadas no banco de dados.

--- a/app/src/main/res/layout/cardview_joke.xml
+++ b/app/src/main/res/layout/cardview_joke.xml
@@ -8,7 +8,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/layout_cardview_joke">
+        android:id="@+id/layout_cardview_joke"
+        android:background="?attr/cardviewBackground">
 
         <TextView
             android:id="@+id/text_cardview_joke"
@@ -27,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginVertical="10dp"
-            android:background="@color/grey"
+            android:background="?attr/linhaCor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_cardview_joke" />
