--- a/app/src/main/res/layout/activity_favorite_jokes.xml
+++ b/app/src/main/res/layout/activity_favorite_jokes.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar_favorite_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:background="?attr/toolbarCor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -28,9 +28,21 @@
             android:text="@string/title_favorite_joke"
             android:textStyle="bold"
             android:textSize="18sp"
-            android:textColor="@color/white"/>
+            android:textColor="?attr/titleText"/>
 
     </androidx.appcompat.widget.Toolbar>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/empty_list"
+        android:textAlignment="center"
+        android:id="@+id/empty_list_favorite_list"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_favorite_list"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -39,12 +51,14 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar_favorite_list"
         app:layout_constraintBottom_toBottomOf="parent">
 
+
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/recyclerview_favorite_joke">
 
         </androidx.recyclerview.widget.RecyclerView>
+
 
     </ScrollView>
 
