--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MainActivity">
+    tools:context=".view.MainActivity"
+    android:id="@+id/layout_main_activity">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:background="?attr/toolbarCor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -18,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_menu"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="?attr/buttonCorFiltros"
             app:tint ="@color/green"
             android:id="@+id/image_button_menu"
             android:tooltipText="@string/title_favorite_joke"/>
@@ -31,7 +32,7 @@
             android:layout_marginStart="40dp"
             android:layout_marginEnd="36dp"
             app:tint ="@color/green"
-            android:backgroundTint="@color/black"
+            android:backgroundTint="?attr/buttonCorFiltros"
             android:src="@drawable/ic_all"
             android:tooltipText="@string/category_all" />
 
@@ -42,7 +43,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="36dp"
             app:tint ="@color/green"
-            android:backgroundTint="@color/black"
+            android:backgroundTint="?attr/buttonCorFiltros"
             android:src="@drawable/ic_programming"
             android:tooltipText="@string/category_programming" />
 
@@ -52,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             app:tint ="@color/green"
-            android:backgroundTint="@color/black"
+            android:backgroundTint="?attr/buttonCorFiltros"
             android:src="@drawable/ic_favorite"
             android:tooltipText="@string/category_favorite" />
 
@@ -77,7 +78,7 @@
         android:layout_height="2dp"
         android:layout_marginVertical="10dp"
         android:layout_marginHorizontal="10dp"
-        android:background="@color/black"
+        android:background="?attr/linhaCor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_joke" />
@@ -89,6 +90,7 @@
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/green"
         android:text="@string/new_joke"
+        android:textColor="?attr/buttonText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/line" />
