--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,12 @@
     <style name="Base.Theme.RandomJoke" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="linhaCor">@color/blackNightTheme</item>
+        <item name="toolbarCor">@color/black</item>
+        <item name="buttonCorFiltros">@color/black</item>
+        <item name="buttonText">@color/white</item>
+        <item name="titleText">@color/white</item>
+        <item name="cardviewBackground">@color/white</item>
     </style>
 
     <style name="Theme.RandomJoke" parent="Base.Theme.RandomJoke" />
